Change log for Bos Wars
-----------------------

Development version:
- Fixed bug #30244: Crash with some map sizes in minimap (Francois Beerten)
- Added Clover map (Michiel van der Wulp)
- Added Gosh patches (Tejay Penfold)
- Added Shipyard (Tejay Penfold and Francois Beerten)
- Added Multiple Fronts map (Michiel van der Wulp)
- Added Atoll Walk map (Michiel van der Wulp)
- Added destroyer ship (Tejay Penfold and Francois Beerten)
- Added water scout unit (Tejay Penfold and Francois Beerten)
- Fixed bug #28951: Undo/redo in the editor now supports patches (Jimmy Salmon)
- Added unit-rocksfield to the map editor (Kalle Olavi Niemitalo)
- Updated tolua++ to 1.0.93 (Jimmy Salmon)
- Fixed bug #22211: Arrow keys don't work right when selecting maps (Jimmy Salmon)
- Fixed bug #29096: Adjacent air units flicker in z-order (Jimmy Salmon)
- Fixed bug #29533: No way to exit the campaign in the briefing screen (Jimmy Salmon)
- Fixed bug #29389: Save/recall map position not preserved during save/reload of game (Jimmy Salmon)
- Fixed bug #29284: Custom patches aren't completely cleaned (Jimmy Salmon)
- Build static binary without requiring apg++ from autopackage (Francois Beerten)
- Fixed bug #29100: Cannot translate resource names shown in map editor (Jimmy Salmon)
- Add build script using fabricate (Francois Beerten)
- Add moon patches (Tejay Penfold)
- Fixed bug #29274: Disabling command log crashes and doesn't always work as expected (Jimmy Salmon)
- Fixed bug #29579: KillUnitAt takes 5 parameters (Jimmy Salmon)

Version 2.6.1 (2010 04 18):
- Fix the position of the morels (Kalle Olavi Niemitalo)
- Correct the draw level of some unit types (Kalle Olavi Niemitalo)
- Update the documentation of the scripting API (Francois Beerten)
- On Windows, use the application directory to save user data (Nehal Mistry)
- Fix crash at the end of the Tutorial campaign (Francois Beerten)

Version 2.6 (2010 04 11):
- Fix crash on exit in Windows (Francois Beerten, Nehal Mistry, Jimmy Salmon)